--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -8,6 +8,7 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />
     <PackageReference Include="NETStandard.Library">
       <Version>1.6.1</Version>
     </PackageReference>
@@ -16,11 +17,14 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="prayzzz.Common">
-      <Version>1.0.0-ci-18</Version>
+      <Version>1.0.0-ci-21</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Domain\Interfaces\" />
+    <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Domain\Mapper\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
