--- a/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
+++ b/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
@@ -11,16 +11,16 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NETStandard.Library">
-      <Version>1.6.1</Version>
-    </PackageReference>
+    <PackageReference Include="NETStandard.Library" Version="1.6.1" />
+
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+        <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-22" />
+
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\prayzzz.Common\src\prayzzz.Common\prayzzz.Common.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
   </ItemGroup>
