--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="**\*.cs" />
+    <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="NETStandard.Library" Version="1.6.1" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-22" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-22" />    
   </ItemGroup>
+
 </Project>
