--- a/.gitignore
+++ b/.gitignore
@@ -245,7 +245,8 @@ ModelManifest.xml
 *.lock
 typings/
 
-src/FlatMate.Web/wwwroot/css/**/*.css
+/src/FlatMate.Web/wwwroot/css/**/*.css
 /src/FlatMate.Web/wwwroot/js/**/*.js.map
 /src/FlatMate.Web/wwwroot/js/**/*.js
+/src/FlatMate.Web/wwwroot/dist/**/*
 /dist
