--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -10,7 +10,7 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "stripInternal": true,
-    "outFile": "js/flatmate.js",
+    "outFile": "dist/js/flatmate.js",
     "lib": [ "es2015", "dom" ]
   }
 }
