--- a/src/FlatMate.Web/bundleconfig.json
+++ b/src/FlatMate.Web/bundleconfig.json
@@ -1,14 +1,20 @@
 ﻿[
   {
-    "outputFileName": "wwwroot/css/flatmate.min.css",
+    "outputFileName": "wwwroot/dist/flatmate.min.css",
     "inputFiles": [
-      "wwwroot/css/*.min.css"
-    ]
+      "wwwroot/dist/flatmate.css"
+    ],
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
+    },
+    "sourceMap": true
   },
   {
-    "outputFileName": "wwwroot/js/site.min.js",
+    "outputFileName": "wwwroot/dist/flatmate.min.js",
     "inputFiles": [
-      "wwwroot/js/site.js"
+      "wwwroot/node_modules/knockout/build/output/knockout-latest.js",
+      "wwwroot/dist/flatmate.js"
     ],
     "minify": {
       "enabled": true,
