--- a/src/FlatMate.Web/compilerconfig.json
+++ b/src/FlatMate.Web/compilerconfig.json
@@ -1,9 +1,10 @@
 ﻿[
   {
-    "outputFile": "wwwroot/dist/css/flatmate.css",
+    "outputFile": "wwwroot/dist/flatmate.css",
     "inputFile": "wwwroot/css/flatmate.scss",
     "minify": {
       "enabled": false
-    }
+    },
+    "sourceMap": true
   }
 ]
