--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -1,16 +1,12 @@
 ﻿{
   "compileOnSave": true,
   "compilerOptions": {
-    "module": "none",
-    "target": "es5",
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "stripInternal": true,
-    "outFile": "dist/js/flatmate.js",
-    "lib": [ "es2015", "dom" ]
+    "outFile": "dist/flatmate.js"
   }
 }
