--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -1,20 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Include="**\*.cs" />
-    <EmbeddedResource Include="**\*.resx" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-22" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NETStandard.Library" Version="1.6.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />    
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-22" />    
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
   </ItemGroup>
