--- a/test/prayzzz.Common.Test/prayzzz.Common.Test.csproj
+++ b/test/prayzzz.Common.Test/prayzzz.Common.Test.csproj
@@ -1,15 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="**\*.cs" />
-    <EmbeddedResource Include="**\*.resx" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />
     <PackageReference Include="Moq" Version="4.6.38-alpha" />
-    <PackageReference Include="NETStandard.Library" Version="1.6.1" />
-
   </ItemGroup>
 </Project>
