--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -2,10 +2,11 @@
   "name": "flatmate",
   "version": "1.0.0",
   "dependencies": {
+    "atomicjs": "^2.1.0",
     "knockout": "^3.4.1",
     "typescript": "^2.1.4"
   },
   "devDependencies": {
-    "typings": "^2.1.0"
+    "@types/knockout": "^3.4.39"
   }
 }
