--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -6,6 +6,10 @@
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="wwwroot\dist\flatmate.min.css" />
+    <Content Include="wwwroot\js\api\apiClient.ts" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.0.0" />
     <PackageReference Include="BuildWebCompiler" Version="1.11.328" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0" />
