--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -1,13 +1,13 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RuntimeIdentifiers>win10-x64;ubuntu.16.04-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup>
-    <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="wwwroot\dist\flatmate.min.css" />
-    <Content Include="wwwroot\js\api\apiClient.ts" />
+    <Content Update="wwwroot/node_modules/**" CopyToPublishDirectory="Never" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.0.0" />
@@ -38,4 +38,12 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0-msbuild3-final" />
   </ItemGroup>
+  <Target Name="BundleFrontend" AfterTargets="PrepareForPublish">
+    <Exec Command="yarn" WorkingDirectory="wwwroot" />
+    <Exec Command="node_modules/.bin/webpack" WorkingDirectory="wwwroot" />
+    <ItemGroup>
+      <DistFolder Include="wwwroot/dist/**/*" />
+    </ItemGroup>
+    <Copy SourceFiles="@(DistFolder)" DestinationFolder="$(PublishDir)\wwwroot\dist\%(RecursiveDir)" />
+  </Target>
 </Project>
