--- a/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
+++ b/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
@@ -6,7 +6,8 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-25" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.1" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-30" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
