--- a/src/FlatMate.Api/FlatMate.Api.csproj
+++ b/src/FlatMate.Api/FlatMate.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Filter\EnsureBodyFilter.cs" />
+    <None Include="Filter\EnsurePostBodyFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="1.1.1" />
