--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=flatmate;Integrated Security=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
