--- a/test/FlatMate.Module.Account.Test/FlatMate.Module.Account.Test.csproj
+++ b/test/FlatMate.Module.Account.Test/FlatMate.Module.Account.Test.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.1.13" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.1.13" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170427-09" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.17" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.17" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-39" />
     <PackageReference Include="prayzzz.Common.Test" Version="1.0.0-ci-39" />
   </ItemGroup>
