- add migration logic - call migrations on Startup

--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Api\FlatMate.Api.csproj" />
+    <ProjectReference Include="..\FlatMate.Migration\FlatMate.Migration.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Lists\FlatMate.Module.Lists.csproj" />
