--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -6,7 +6,8 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.1" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-39" />
   </ItemGroup>
