- production credential handling

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -11,9 +11,7 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "LiterateConsole"
-      }
+      { "Name": "LiterateConsole" }
     ]
   }
 }
