--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=flatmate;Uid=##dbuser##;Pwd=##dbpassword##;"
+    "Production": "Server=(LocalDB)\\MSSQLLocalDB;Database=flatmate;"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -13,10 +13,9 @@
     "WriteTo": [
       {
         "Name": "RollingFile",
-        "Args": {
-          "pathFormat": "../logs/flatmate.txt"
-        }
-      }
+        "Args": { "pathFormat": "../logs/flatmate.txt" }
+      },
+      { "Name": "LiterateConsole" }
     ],
     "Enrich": [ "FromLogContext" ]
   }
