--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -1,3 +1,7 @@
 ﻿{
-
+  "Migration": {
+    "MigrationsFolder": "./_Migrations/",
+    "Schema": "Infrastructure",
+    "CreateMissingSchema": true
+  }
 }
