--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,13 +1,14 @@
 ﻿{
   "ConnectionStrings": {
-    "Production": "Server=(LocalDB)\\MSSQLLocalDB;Database=flatmate;"
+    "Production": "Server=localhost;Database=flatmate2;"
   },
+
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "System": "Information"
       }
     },
     "WriteTo": [
