--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -6,19 +6,47 @@
   "license": "MIT",
   "dependencies": {
     "atomicjs": "^2.1.0",
-    "knockout": "^3.4.1"
+    "knockout": "^3.4.1",
+    "knockout-dragdrop": "^2.5.1"
   },
   "devDependencies": {
     "@types/knockout": "^3.4.39",
-    "node-sass": "^4.5.0",
-    "ts-loader": "^2.0.0",
-    "typescript": "^2.2.1",
-    "tslint": "^4.4.2",
-    "webpack": "^2.2.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1"
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
+    "ts-loader": "^2.0.0",
+    "tslint": "^5.2.0",
+    "typescript": "^2.2.1",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
+    "webpack": "^2.2.1"
+  },
+  "resolutions": {
+    "uglify-js": "2.8.22",
+    "css-selector-tokenizer": "0.7.0",
+    "loader-utils": "1.1.0",
+    "source-list-map": "1.1.2",
+    "supports-color": "3.2.3",
+    "source-map": "0.5.6",
+    "minimist": "1.2.0",
+    "webpack-sources": "0.2.3",
+    "lodash": "4.17.4",
+    "glob": "7.1.1",
+    "inherits": "2.0.3",
+    "camelcase": "3.0.0",
+    "nopt": "4.0.1",
+    "string_decoder": "1.0.0",
+    "assert-plus": "1.0.0",
+    "punycode": "1.4.1",
+    "yargs": "6.6.0",
+    "cliui": "3.2.0",
+    "kind-of": "3.2.0",
+    "lazy-cache": "1.0.4",
+    "for-in": "1.0.2",
+    "isobject": "2.1.0",
+    "wordwrap": "0.0.3",
+    "acorn": "5.0.3"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
