--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,22 +5,22 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "atomicjs": "^2.1.0",
-    "knockout": "^3.4.1",
-    "knockout-dragdrop": "^2.5.1"
+    "atomicjs": "~2.1.0",
+    "knockout": "~3.4.2",
+    "knockout-dragdrop": "~2.5.1"
   },
   "devDependencies": {
-    "@types/knockout": "^3.4.39",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
-    "ts-loader": "^2.0.0",
-    "tslint": "^5.2.0",
-    "typescript": "^2.3.2",
+    "@types/knockout": "~3.4.40",
+    "css-loader": "~0.28.4",
+    "extract-text-webpack-plugin": "~2.1.2",
+    "node-sass": "~4.5.3",
+    "sass-loader": "~6.0.6",
+    "style-loader": "~0.18.2",
+    "ts-loader": "~2.1.0",
+    "tslint": "~5.4.3",
+    "typescript": "~2.3.4",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony-v2.8.22",
-    "webpack": "^2.2.1"
+    "webpack": "~2.6.1"
   },
   "resolutions": {
     "uglify-js": "2.8.22",
