- upgrade to netcoreapp2.0

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -11,8 +11,13 @@
       }
     },
     "WriteTo": [
-      "Trace",
-      "LiterateConsole"
+      {
+        "Name": "Trace"
+      },
+      {
+        "Name": "LiterateConsole",
+        "args": { "restrictedToMinimumLevel": "Information" }
+      }
     ]
   }
 }
