--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -2,22 +2,25 @@
   "ConnectionStrings": {
     "Production": "Server=localhost;Database=flatmate2;"
   },
-
-  "Serilog": {
+    "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Information"
+        "System": "Warning",
+        "Microsoft": "Warning"
       }
     },
     "WriteTo": [
       {
         "Name": "RollingFile",
-        "Args": { "pathFormat": "../logs/flatmate.txt" }
+        "Args": {
+          "pathFormat": "log/odd-monitor_{Date}.txt",
+          "retainedFileCountLimit": 7
+        }
       },
-      { "Name": "LiterateConsole" }
-    ],
-    "Enrich": [ "FromLogContext" ]
+      {
+        "Name": "LiterateConsole"
+      }
+    ]
   }
 }
