--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-42" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev" />
   </ItemGroup>
 </Project>
