--- a/test/FlatMate.Module.Account.Test/FlatMate.Module.Account.Test.csproj
+++ b/test/FlatMate.Module.Account.Test/FlatMate.Module.Account.Test.csproj
@@ -10,8 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-ci-42" />
-    <PackageReference Include="prayzzz.Common.Test" Version="1.0.0-ci-42" />
+    <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0-dev" />
   </ItemGroup>
   
   <ItemGroup>
