- fixed production settings

--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "Production": "Server=localhost;Database=flatmate2;"
+    "Production": "Server=localhost;Database=flatmate;"
   },
-    "Serilog": {
+  "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -14,7 +14,7 @@
       {
         "Name": "RollingFile",
         "Args": {
-          "pathFormat": "log/odd-monitor_{Date}.txt",
+          "pathFormat": "../log/flatmate_{Date}.txt",
           "retainedFileCountLimit": 7
         }
       },
