--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -3,5 +3,11 @@
     "MigrationsFolder": "./_Migrations/",
     "Schema": "Infrastructure",
     "CreateMissingSchema": true
+  },
+  "Offers": {
+    "Rewe": {
+      "HostUrl": "https://mobile-api.rewe.de",
+      "MarketId": 1931046
+    }
   }
 }
