--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -1,15 +1,19 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
+  
   <Import Project="..\..\build\common.props" />
   <Import Project="..\..\version.props" />
+  
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RuntimeIdentifiers>win-x64,linux-x64</RuntimeIdentifiers>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
+  
   <ItemGroup>
     <Content Update="wwwroot/node_modules/**" CopyToPublishDirectory="Never" />
     <Content Include="_Migrations/**" CopyToPublishDirectory="Always" />
   </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
@@ -17,10 +21,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0-dev" />
+    <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0-dev-21" />
     <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
@@ -28,16 +32,21 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="1.0.0" />
   </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Api\FlatMate.Api.csproj" />
     <ProjectReference Include="..\FlatMate.Migration\FlatMate.Migration.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
+    <ProjectReference Include="..\FlatMate.Module.Infrastructure\FlatMate.Module.Infrastructure.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Lists\FlatMate.Module.Lists.csproj" />
+    <ProjectReference Include="..\FlatMate.Module.Offers\FlatMate.Module.Offers.csproj" />
   </ItemGroup>
+  
   <Target Name="PrintVersion" BeforeTargets="BeforeBuild">
     <Message Text="Building $(AssemblyName) version $(Version)" Importance="High" />
   </Target>
+  
   <Target Name="BuildFrontend" AfterTargets="AfterBuild" Condition="'$(Configuration)' == 'Release'">
     <ItemGroup>
       <FrontendFiles Include="./wwwroot/dist/*" />
@@ -46,10 +55,12 @@
     <Exec Command="yarn --force" WorkingDirectory="wwwroot" />
     <Exec Command="./node_modules/.bin/webpack --env=$(Configuration)" WorkingDirectory="wwwroot" />
   </Target>
+  
   <Target Name="PublishFrontend" AfterTargets="PrepareForPublish" DependsOnTargets="BuildFrontend">
     <ItemGroup>
       <DistFolder Include="wwwroot/dist/**/*" />
     </ItemGroup>
     <Copy SourceFiles="@(DistFolder)" DestinationFolder="$(PublishDir)\wwwroot\dist\%(RecursiveDir)" />
   </Target>
+  
 </Project>
