- add product categories - add import offer job - formatting

--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <None Include="Tasks\IScheduledTask.cs" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-23" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-24" />
   </ItemGroup>
   
 </Project>
