--- a/src/FlatMate.Api/FlatMate.Api.csproj
+++ b/src/FlatMate.Api/FlatMate.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
   </ItemGroup>
   
   <ItemGroup>
