--- a/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
+++ b/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-24" />
     <PackageReference Include="Refit" Version="4.0.1" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
   </ItemGroup>
 
   <ItemGroup>
