--- a/test/FlatMate.Module.Offers.Test/FlatMate.Module.Offers.Test.csproj
+++ b/test/FlatMate.Module.Offers.Test/FlatMate.Module.Offers.Test.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
     <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0-dev-24" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
   </ItemGroup>
   
   <ItemGroup>
